--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <<!DOCTYPE html>
 <html>
 <head>
+<!-- CSS inclusion -->
+	<link rel="stylesheet" type="text/css" href="css/jquery-comments.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
 
+
+
+<!-- Script inclusion -->
+	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="js/lib/MultiScreen.js"></script>
 </body>
 </html>
