--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<ul id="menu" class="nav navbar-nav">
 			<li><a href="#screen0">Home</a></li>
 			<li><a href="#screen1">Profile</a></li>
+			<li><a href="#screen2">Loading</a></li>
 			<li><a href="#"></a></li>
 		</ul>
 		</div><!--/.nav-collapse -->
@@ -135,8 +136,70 @@
   </div>
 </div>
 </div>
-</div>
 <!-- !Profile Page -->
+<div class="section" data-anchor="slide2">
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="page-header">
+				<h1>
+					Who can help you ? <small>waiting for someone available...</small>
+				</h1>
+			</div>
+			<div class="row">
+				<div class="col-xs-6 col-md-3 col-md-offset-3">
+					<div class="thumbnail">
+						<img class="img-responsive" alt="Bootstrap Thumbnail First" src="img/building.png"/>
+						<div class="caption">
+							<h3>
+								2 people around you
+							</h3>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-6 col-md-3">
+					<div class="thumbnail">
+						<img class="img-responsive" alt="Bootstrap Thumbnail Second" src="img/earth.png"/>
+						<div class="caption">
+							<h3>
+								76 people around the world
+							</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="list-group">
+				<a href="#" class="list-group-item active">Similar requests</a>
+				<div class="list-group-item">
+					<h4 class="list-group-item-heading">
+					How to do a table in excel ?
+					</h4>
+					<p class="list-group-item-text ellips-text">
+						Lorem ipsum Irure labore aliqua in sed pariatur velit et qui eu aliquip culpa exercitation enim sint et eu Duis incididunt adipisicing laboris esse sit tempor aute in consequat dolor ut esse voluptate aliqua velit.
+					</p>
+				</div>
+				<div class="list-group-item">
+					<h4 class="list-group-item-heading">
+					How optimize a trie in Malbolge ?
+					</h4>
+					<p class="list-group-item-text ellips-text">
+						Lorem ipsum Commodo magna Duis eu laboris non sed sint fugiat occaecat veniam commodo.
+					</p>
+				</div>
+				<div class="list-group-item">
+					<h4 class="list-group-item-heading">
+					I'm so scared about CSS, where to start ?
+					</h4>
+					<p class="list-group-item-text ellips-text">
+						Lorem ipsum Qui ut reprehenderit dolor et consequat esse veniam exercitation qui irure aliquip est laboris cillum incididunt laboris velit eiusmod.
+					</p>
+				</div>
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
+</div>
 
 <!-- Script inclusion -->
 	<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
@@ -145,8 +208,8 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
-				sectionsColor: ['#1bbc9b', '#4BBFC3'],
-				anchors: ['screen0', 'screen1'],
+				sectionsColor: ['#1bbc9b', '#4BBFC3', '#4BBFC3'],
+				anchors: ['screen0', 'screen1', 'screen2'],
 				menu: '#menu',
 				scrollingSpeed: 1000
 			});
