--- a/contact.html
+++ b/contact.html
@@ -1,90 +1,93 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		<!-- CSS inclusion -->
-		<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css">
-		<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
-		<!-- Font inclusion -->
-		<link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
+<head>
+	<!-- CSS inclusion -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<!-- Font inclusion -->
+	<link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/cd.css" />
 
-		<!-- Script inclusion -->
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<!-- Header -->
-		<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand main-title" href="#">HELP - Y<img class="pull-left logo-helpy" src="img/logo.png"></a>
-			</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul id="menu" class="nav navbar-nav navbar-right">
-					<li><a href="#screen0">Home</a></li>
-					<li><a href="#screen1">Profile</a></li>
-					<li><a href="#"></a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div><!--/.container-fluid -->
-		</nav>
-		<!-- !Header -->
+	<!-- Header -->
+	<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand main-title" href="#">HELP - Y<img class="pull-left logo-helpy" src="img/logo.png"></a>
+		</div>
+		<div id="navbar" class="navbar-collapse collapse">
+			<ul id="menu" class="nav navbar-nav navbar-right">
+				<li><a href="#screen0">Home</a></li>
+				<li><a href="#screen1">Profile</a></li>
+				<li><a href="#"></a></li>
+			</ul>
+		</div><!--/.nav-collapse -->
+	</div><!--/.container-fluid -->
+	</nav>
+	<!-- !Header -->
 
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
-					<a href="" class="btn btn-block btn-success"><i class="pull-left fa fa-user" aria-hidden="true"></i>John do</a>
-				</div>
-			</div>
-			<div class="row">
-
-				<div class="panel panel-info">
-					<div class="panel-heading">Panel with panel-info class</div>
-					<div class="panel-body">Panel Content</div>
-				</div>
-			</div>
-			<div class="row">
-				<span class="fa fa-folder-open-o fa-2x"></span>
-				<span class="fa fa-photo fa-2x"></span>
-				<span class="fa fa-microphone fa-2x"></span>
-			</div>
-			<div class="row">
-				<div class="form-group">
-					<textarea placeholder="Quick answer." class="form-control" cols="40" id="message" name="message" rows="10"></textarea>
-				</div>
-			</div>
-			<div class="row text-center">
-					<a href="">
-						<span class="btn btn-info fa fa-phone fa-4x"></span>
-					</a>
-					<a href="">
-						<span class="btn btn-info fa fa-envelope fa-4x"></span>
-					</a>
-					<a href="">
-						<span class="btn btn-info fa fa-commenting-o fa-4x"></span>
-					</a>
-					<a href="">
-						<span class="btn btn-success fa fa-check fa-4x"></span>
-					</a>
-					<a href="" class="btn btn-danger">
-						<span class=" fa fa-close fa-4x"></span>
-					</a>
+	<div class="container">
+		<div class="jumbotron">
+			<h3>Technical German Translation</h3>
+			<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis eros egestas, consequat purus eget, hendrerit tortor. Nulla ac ante vitae ipsum commodo sodales. Fusce nec diam ut felis porttitor aliquet et quis urna. Praesent porta ultricies ex, bibendum dignissim magna posuere vel. In libero metus, vehicula aliquam justo ac, venenatis rutrum dolor. Nulla aliquam ac tellus sed tincidunt. Morbi luctus purus sed leo consectetur viverra.
+			</p>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-4">
+				<a href="" class="btn btn-block btn-success"><i class="pull-left fa fa-user" aria-hidden="true"></i>John do</a>
 			</div>
 		</div>
+		<div class="row">
+			<!-- <div class="panel panel-info"> -->
+				<!-- <div class="panel-heading">Technical German Translation</div> -->
+				<!-- <div class="panel-body">...</div> -->
+			<!-- </div> -->
+		</div>
+		<div class="row">
+			<span class="fa fa-folder-open-o fa-2x"></span>
+			<span class="fa fa-photo fa-2x"></span>
+			<span class="fa fa-microphone fa-2x"></span>
+		</div>
+		<div class="row">
+			<div class="form-group">
+				<textarea placeholder="Quick answer." class="form-control" cols="40" id="message" name="message" rows="10"></textarea>
+			</div>
+		</div>
+		<div class="row text-center">
+			<a href="" class="btn btn-info ">
+				<span class="fa fa-phone fa-4x"></span>
+			</a>
+			<a href="" class="btn btn-info ">
+				<span class="fa fa-envelope fa-4x"></span>
+			</a>
+			<a href="" class="btn btn-info ">
+				<span class="fa fa-commenting-o fa-4x"></span>
+			</a>
+			<a href="" class="btn btn-success ">
+				<span class="fa fa-check fa-4x"></span>
+			</a>
+			<a href="" class="btn btn-danger">
+				<span class=" fa fa-close fa-4x"></span>
+			</a>
+		</div>
+	</div>
 
-		<!-- Script inclusion -->
-		<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
-		<script type="text/javascript" src="js/gettags.js"></script>
-		<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-	</body>
+	<!-- Script inclusion -->
+	<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="js/gettags.js"></script>
+	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+</body>
 </html>
