--- a/user.html
+++ b/user.html
@@ -74,6 +74,7 @@
 											<span class="label label-info">SQL</span>
 											<span class="label label-warning">BrainFuck</span>
 											<span class="label label-danger">Danger</span><br><br>
+											<span class="label label-danger fa fa-close"></span><br><br>
 											<small class="text-muted">Created: 01.01.2015</small>
 										</div>
 										<div class="col-md-6">
