--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 			<div class="jumbotron" style="padding:5px;">
 				<div class="row">
 				<div class="col-xs-3">
-					<img src="img/logo.png" class="img-responsive">
+					<img src="img/logo.png" class="img-responsive" width="100px">
 				</div>
 				<div class="col-xs-9">
 				<h1>I need help !</h1>
@@ -72,18 +72,35 @@
 						<!-- Bottom icons -->
 						<div id="tags">
 						</div>
-						<div class="icon-line">
-							<i class="fa fa-microphone fa-3x" aria-hidden="true"></i>
-							<i class="fa fa-paperclip fa-3x" aria-hidden="true"></i>
-							<i class="fa fa-camera fa-3x" aria-hidden="true"></i>
+						<div class="icon-line" style="padding:20px;">
+							<i class="fa fa-microphone fa-3x" aria-hidden="true" style="padding:20px;"></i>    
+							<i class="fa fa-paperclip fa-3x" aria-hidden="true" style="padding:20px;"></i>   
+							<i class="fa fa-camera fa-3x" aria-hidden="true" style="padding-left:20px;"></i>   
 						</div>
 						<!-- Deadline -->
 						<div class="deadline">
 						</div>
+						<div class="row">
+        <div class='col-sm-6'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
+    </div>
 						<div class="form-group">
 							<div class="col-xs-6 col-xs-offset-3">
 								<button class="btn btn-primary btn-block" name="submit" type="submit">
-									<h2 style="color:white" >Send my request<span class="pull-right fa fa-send-o"></span></h2>
+									<h2 style="color:white" >Ask !<span class="pull-right fa fa-send-o"></span></h2>
 								</button>
 							</div>
 						</div>
