--- a/search.html
+++ b/search.html
@@ -47,29 +47,28 @@
 
 
 		<div class="container-fluid">
-			<div class="row jumbotron">
-				Reauest sended.
-			</div>
+			<div class="row jumbotron text-center">
+
+						<h1>
+							Who can help me ? 
+						</h1>			</div>
 				<div class="col-md-12">
 					<div class="page-header">
-						<h1>
-							Who can help you ? <small>waiting for someone available...</small>
-						</h1>
 					</div>
 					<div class="row">
-						<div class="col-xs-4 col-xs-offset-1 col-md-3 col-md-offset-3  -center">
+						<div class="col-xs-4 col-xs-offset-1 col-md-3 col-md-offset-3  text-center">
 							<img class="img-responsive" alt="Bootstrap Thumbnail First" src="img/near.png"/>
-							<h3>2 people around you</h3>
+							<h3>2 people around me</h3>
 						</div>
 						<div class="col-xs-4 col-xs-offset-2 col-md-3 text-center">
-							<img class="img-responsive" alt="Bootstrap Thumbnail Second" src="img/around.png"/>
+							<img class="img-responsive" alt="Bootstrap Thumbnail Second" src="img/around.png" style="border-radius:1px solid black"/>
 							<h3>76 people around the world</h3>
 						</div>
 					</div>
 					<div class="list-group">
 						<a href="#" class="list-group-item list-group-item-primary" style="background-color:#00babc;color:white;text-weight:bold;font-size:2em;">Similar requests</a>
 						<div class="list-group-item">
-							<h4 class="list-group-item-heading">
+							<h4 class="list-group-item-heading" style="font-weigth:bold;">
 								How to do a table in excel ?
 							</h4>
 							<p class="list-group-item-text ellips-text">
@@ -77,15 +76,15 @@
 							</p>
 						</div>
 						<div class="list-group-item">
-							<h4 class="list-group-item-heading">
+							<h4 class="list-group-item-heading" style="font-weigth:bold;">
 								How optimize a trie in Malbolge ?
 							</h4>
-							<p class="list-group-item-text ellips-text">
+							<p class="list-group-item-text ellips-text" style="font-weigth:bold;">
 							Lorem ipsum Commodo magna Duis eu laboris non sed sint fugiat occaecat veniam commodo.
 							</p>
 						</div>
 						<div class="list-group-item">
-							<h4 class="list-group-item-heading">
+							<h4 class="list-group-item-heading" style="font-weigth:bold;">
 								I'm so scared about CSS, where to start ?
 							</h4>
 							<p class="list-group-item-text ellips-text">
