--- a/main.html
+++ b/main.html
@@ -16,6 +16,10 @@
 		<link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/font-awesome.min.css" />
 		<link rel="stylesheet" href="css/cd.css"/>
+			<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
+				<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
+
+
 	</head>
 
 	<body>
@@ -56,7 +60,6 @@
 				</div>
 				</div>
 			</div>
-			<div class="row">
 						<div class="form-group ">
 							<div class="input-group">
 								<div class="input-group-addon">
@@ -73,15 +76,33 @@
 						<div id="tags">
 						</div>
 						<div class="icon-line" style="padding:20px;">
-							<i class="fa fa-microphone fa-3x" aria-hidden="true" style="padding:20px;"></i>    
-							<i class="fa fa-paperclip fa-3x" aria-hidden="true" style="padding:20px;"></i>   
-							<i class="fa fa-camera fa-3x" aria-hidden="true" style="padding-left:20px;"></i>   
+							<i class="fa fa-microphone fa-3x" aria-hidden="true" style="padding:20px;"></i>
+							<i class="fa fa-paperclip fa-3x" aria-hidden="true" style="padding:20px;"></i><span class="badge badge-notify">1</span>
+							<i class="fa fa-camera fa-3x" aria-hidden="true" style="padding-left:20px;"></i><span class="badge badge-danger badge-notify">3</span>
 						</div>
 						<!-- Deadline -->
 						<div class="deadline">
 						</div>
-						<div class="row">
-        <div class='col-sm-6'>
+						<div class="row"
+						<div style="overflow:hidden;">
+    <div class="form-group">
+        <div class="row">
+            <div class="col-md-8">
+                <div id="datetimepicker12"></div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        $(function () {
+            $('#datetimepicker12').datetimepicker({
+                inline: true,
+                sideBySide: true
+            });
+        });
+    </script>
+</div>
+</div>
+<!--         <div class='col-xs-6'>
             <div class="form-group">
                 <div class='input-group date' id='datetimepicker1'>
                     <input type='text' class="form-control" />
@@ -96,9 +117,9 @@
                 $('#datetimepicker1').datetimepicker();
             });
         </script>
-    </div>
+    </div> -->
 						<div class="form-group">
-							<div class="col-xs-6 col-xs-offset-3">
+							<div class="">
 								<button class="btn btn-primary btn-block" name="submit" type="submit">
 									<h2 style="color:white" >Ask !<span class="pull-right fa fa-send-o"></span></h2>
 								</button>
@@ -107,12 +128,16 @@
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
 	<!-- Question Page -->
 
 	<!-- Script inclusion -->
-	<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="js/gettags.js"></script>
-	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery.fullPage.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
