--- a/user.html
+++ b/user.html
@@ -58,16 +58,13 @@
 								</div>
 								<div class="col-md-8">
 									<div class="row">
-										<div class="col-md-12">
+										<div class="col-md-4">
 											<h1 class="only-bottom-margin">User Name</h1>
 										</div>
-									</div>
-									<div class="row">
-										<div class="col-md-6">
+										<div class="cold-xs-8"><p style="font-size:2em;">
 											<span class="text-muted">Email:</span> email@test.com<br>
-											<span class="text-muted">Birth date:</span> 01.01.2001<br>
-											<span class="text-muted">Gender:</span> male<br><br>
 											<span class="text-muted">Skills:</span>
+										<div class="col-md-6">
 											<span class="label label-default">Excel</span>
 											<span class="label label-primary">Word</span>
 											<span class="label label-success">Speech</span>
@@ -75,13 +72,15 @@
 											<span class="label label-warning">BrainFuck</span>
 											<span class="label label-danger">Danger</span><br><br>
 											<span class="label label-danger fa fa-close"></span><br><br>
-											<small class="text-muted">Created: 01.01.2015</small>
+											<p class="text-muted">Last activity: 2 days ago.</p>
 										</div>
 										<div class="col-md-6">
 											<div class="activity-mini">
 												<i class="glyphicon glyphicon-thumbs-up text-muted"></i> 1500
 											</div>
 										</div>
+																				</p>
+
 									</div>
 								</div>
 							</div>
