--- a/contact.html
+++ b/contact.html
@@ -13,28 +13,28 @@
 
 <body>
 
-	<!-- Header -->
-	<nav class="navbar navbar-default">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand main-title" href="#">HELP - Y<img class="pull-left logo-helpy" src="img/logo.png"></a>
-		</div>
-		<div id="navbar" class="navbar-collapse collapse">
-			<ul id="menu" class="nav navbar-nav navbar-right">
-				<li><a href="#screen0">Home</a></li>
-				<li><a href="#screen1">Profile</a></li>
-				<li><a href="#"></a></li>
-			</ul>
-		</div><!--/.nav-collapse -->
-	</div><!--/.container-fluid -->
-	</nav>
-	<!-- !Header -->
+<!-- Header -->
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a id="title-brand" class="navbar-brand main-title" href="#"><span style="color:#f55b6f">H</span><span style="color:#cfa100">E</span><span style="color:#3bb7e6">L</span><span style="color:#abbd2c">P</span> - Y<img class="pull-left logo-helpy" src="img/logo.png"></a>
+	</div>
+	<div id="navbar" class="navbar-collapse collapse">
+		<ul id="menu" class="nav navbar-nav">
+			<li><a onclick="window.location.href='index.html'">Home</a></li>
+			<li><a onclick="window.location.href='user.html'">Profile</a></li>
+			<li><a onclick="window.location.href='notifications.html'">Notification</a></li>
+		</ul>
+	</div><!--/.nav-collapse -->
+</div><!--/.container-fluid -->
+</nav>
+<!-- !Header -->
 
 	<div class="container-fluid">
 				<div class="row">
