--- a/search.html
+++ b/search.html
@@ -47,7 +47,7 @@
 
 
 		<div class="container-fluid">
-			<div class="row jumbotron text-center">
+			<div class="jumbotron text-center">
 
 						<h1>
 							Who can help me ? 
