--- a/contact.html
+++ b/contact.html
@@ -37,30 +37,21 @@
 	<!-- !Header -->
 
 	<div class="container-fluid">
-				<div class="row">
 			<div class="" >
 				<a href="" class="btn btn-block btn-success btn-block" style="background-color:#00babc;text-weight:bold;"><h3 style=";color:white;"><i class="pull-left fa fa-user" aria-hidden="true"></i>Margaret Tatcher</h3></a>
 			</div>
-		</div>
+
 		<div class="jumbotron">
-			<h3>Title: Technical German Translation</h3>
+			<h3>Title: Excel graph option</h3>
 			<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur quis eros egestas, consequat purus eget, hendrerit tortor. Nulla ac ante vitae ipsum commodo sodales. Fusce nec diam ut felis porttitor aliquet et quis urna. Praesent porta ultricies ex, bibendum dignissim magna posuere vel. In libero metus, vehicula aliquam justo ac, venenatis rutrum dolor. Nulla aliquam ac tellus sed tincidunt. Morbi luctus purus sed leo consectetur viverra.
+			How to change color of graph?
 			</p>
 		</div>
 
-		<div class="row">
-			<!-- <div class="panel panel-info"> -->
-				<!-- <div class="panel-heading">Technical German Translation</div> -->
-				<!-- <div class="panel-body">...</div> -->
-			<!-- </div> -->
-		</div>
-		<div class="row">
+			<img class="img-responsive img-thumbnail" src="img/annImg2.png"/>
 			<span class="fa fa-folder-open-o fa-2x" style="padding-left: 20px;"></span>
-			<span class="fa fa-photo fa-2x" style="padding-left: 20px;"></span>
 			<span class="fa fa-microphone fa-2x" style="padding-left: 20px;"></span>
-		</div>
-		<div class="row">
+
 			<div class="form-group">
 				<textarea placeholder="Quick answer." class="form-control" cols="40" id="message" name="message" rows="10"></textarea>
 			</div>
