--- a/feedback.html
+++ b/feedback.html
@@ -125,7 +125,7 @@
 							<label for="com"><h4>Comment</h4></label>
 							<textarea class="form-control" plpaceholder="Leave a nice comment." id="com"></textarea>
 						</fieldset>
-						<a class="btn btn-success btn-block"><h4>Thanks !</h4></a>
+						<a href="user.html" class="btn btn-success btn-block"><h4>Thanks !</h4></a>
 							</div>
 						</div>
 					</form>
