--- a/search.html
+++ b/search.html
@@ -55,11 +55,11 @@
 					</div>
 					<div class="row">
 						<div class="col-xs-4 col-xs-offset-1 col-md-3 col-md-offset-3  text-center">
-							<img class="img-responsive" alt="Bootstrap Thumbnail First" src="img/near.png"/>
+							<a href="sending.html"><img class="img-responsive" alt="Bootstrap Thumbnail First" src="img/near.png"/></a>
 							<h3>2 people around me</h3>
 						</div>
 						<div class="col-xs-4 col-xs-offset-2 col-md-3 text-center">
-							<img class="img-responsive" alt="Bootstrap Thumbnail Second" src="img/around.png" style="border-radius:1px solid black"/>
+							<a href="sending.html"><img class="img-responsive" alt="Bootstrap Thumbnail Second" src="img/around.png" style="border-radius:1px solid black"/></a>
 							<h3>76 people around the world</h3>
 						</div>
 					</div>
