--- a/sending.html
+++ b/sending.html
@@ -49,13 +49,18 @@
 					Available people
 				</h1>
 			</div>
-			<div class="row">
+			<div class="row text-center">
 				<div clas="col-xs-6 col-xs-offset-3">
 					<button class="btn">Sort</button>
 					<button class="btn">Notify All</button>
 				</div>
 			</div>
 
+		<div class="row text-center" id="final-notif" style="display:none">
+			<div class="alert alert-success">
+				<strong>Notification sent</strong>
+			</div>
+		</div>
 			<div class="event-list">
 				<div class="event-item" data-event-kind="">
 					<div class="event-overflow">
@@ -78,7 +83,7 @@
 							</div>
 						</div>
 					</div>
-				<div class="event-left">
+				<div class="event-left" onclick="successNotif();">
 						<div class="date-day"><span class="fa fa-send"</span></div>
 						<div class="date-month">Notify</div>
 					</div>
@@ -104,7 +109,7 @@
 							</div>
 						</div>
 					</div>
-				<div class="event-left">
+				<div class="event-left" onclick="successNotif();">
 						<div class="date-day"><span class="fa fa-send"</span></div>
 						<div class="date-month">Notify</div>
 					</div>
@@ -130,7 +135,7 @@
 							</div>
 						</div>
 					</div>
-				<div class="event-left">
+				<div class="event-left" onclick="successNotif();">
 						<div class="date-day"><span class="fa fa-send"</span></div>
 						<div class="date-month">Notify</div>
 					</div>
@@ -147,6 +152,11 @@
 	<script type="text/javascript" src="js/lib/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/lib/jquery.fullPage.min.js"></script>
+	<script type="text/javascript">
+	function	successNotif() {
+		$('#final-notif').css('display', 'block');
+	}
+	</script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
