--- a/user.html
+++ b/user.html
@@ -40,16 +40,17 @@
 		</div><!--/.nav-collapse -->
 	</div><!--/.container-fluid -->
 	</nav>
-	<!-- !Header -->
+	<!-- !Header -->:
 
 		<div class="container">
+			<div class="jumbotron">
+				<h1>User Profile</h1>
+			</div>
 			<div class="row">
 				<div class="col-md-9">
 					<div class="panel panel-default">
 						<div class="panel-body">
-							<div class="row">
-								<div class="col-md-12 lead">User profile<hr></div>
-							</div>
+
 							<div class="row">
 								<div class="col-md-4 text-center">
 									<img class="img-circle avatar avatar-original" style="-webkit-user-select:none;
@@ -57,13 +58,11 @@
 								</div>
 								<div class="col-md-8">
 									<div class="row">
-										<div class="col-md-4">
-											<h1 class="only-bottom-margin">User Name</h1>
-										</div>
-										<div class="cold-xs-8"><p style="font-size:2em;">
-											<span class="text-muted">Email:</span> email@test.com<br>
-											<span class="text-muted">Skills:</span>
-										<div class="col-md-6">
+										<div class="col-md-8">
+											<h1 class="only-bottom-margin">Margaret Tatcher</h1>
+																						<span class="text-muted">Email:</span> email@test.com<br>
+
+										</div><p style="font-size:2em;">
 											<span class="label label-default">Excel</span>
 											<span class="label label-primary">Word</span>
 											<span class="label label-success">Speech</span>
@@ -73,9 +72,9 @@
 											<span class="label label-danger fa fa-close"></span><br><br>
 											<p class="text-muted">Last activity: 2 days ago.</p>
 										</div>
-										<div class="col-md-6">
+										<div class="col-xs-4">
 											<div class="activity-mini">
-												<i class="glyphicon glyphicon-thumbs-up text-muted"></i> 1500
+												<h3><i class="fa fa-thumbs-o-up"></i> 1500</h3>
 											</div>
 										</div>
 																				</p>
